各ファイルにコメント追加

--- a/index.html
+++ b/index.html
@@ -1,4 +1,181 @@
 <!DOCTYPE html>
+<!--
+/**
+ * index.html
+ *
+ * ============================================================================
+ * 📖 ファイル概要 / File Overview
+ * ============================================================================
+ *
+ * 【日本語】
+ * ポートフォリオサイトのメインHTMLファイル。
+ * ページ構造、セクション、コンポーネントを定義します。
+ *
+ * 【主な構成】
+ * 1. スプラッシュスクリーン（ウェルカム画面）
+ * 2. ナビゲーションバー（固定ヘッダー）
+ * 3. ヒーローセクション（メインビジュアル）
+ * 4. 自己紹介セクション
+ * 5. スキルセクション
+ * 6. 競技プログラミングセクション（AtCoder）
+ * 7. お問い合わせセクション
+ * 8. フッター
+ *
+ * 【English】
+ * Main HTML file for the portfolio site.
+ * Defines page structure, sections, and components.
+ *
+ * 【Main Structure】
+ * 1. Splash screen (welcome screen)
+ * 2. Navigation bar (fixed header)
+ * 3. Hero section (main visual)
+ * 4. About section
+ * 5. Skills section
+ * 6. Competitive programming section (AtCoder)
+ * 7. Contact section
+ * 8. Footer
+ *
+ * ============================================================================
+ * 📦 主要セクション / Main Sections
+ * ============================================================================
+ *
+ * ◆ #splash-screen
+ * ────────────────────────────────────────────────────────────────────────
+ * - 日本語: スプラッシュスクリーン（初回表示のウェルカム画面）
+ * - English: Splash screen (welcome screen on initial load)
+ * - 子要素:
+ *   - .splash-content: コンテンツコンテナ
+ *   - .splash-title: タイトル
+ *   - .splash-text: テキスト「私の住処へようこそ！」
+ *   - .splash-dash: ダッシュ装飾「ーーー」
+ * - 制御: script.js の initializeSplashScreen()
+ *
+ * ◆ .navbar
+ * ────────────────────────────────────────────────────────────────────────
+ * - 日本語: 固定ナビゲーションバー
+ * - English: Fixed navigation bar
+ * - 子要素:
+ *   - .nav-container: ナビゲーションコンテナ
+ *   - .nav-logo: ロゴ「Maedora」
+ *   - .nav-menu: メニュー項目リスト
+ *   - .nav-item: 各メニュー項目
+ *   - .nav-link: メニューリンク
+ *   - .hamburger: モバイル用ハンバーガーメニューアイコン
+ *
+ * ◆ #home (.hero)
+ * ────────────────────────────────────────────────────────────────────────
+ * - 日本語: ヒーローセクション（メインビジュアル）
+ * - English: Hero section (main visual)
+ * - 子要素:
+ *   - .hero-content: コンテンツコンテナ
+ *   - .hero-title: メインタイトル「前川 雄世」
+ *   - .hero-subtitle: サブタイトル（タイピングエフェクト）
+ *   - .hero-buttons: ボタングループ
+ *
+ * ◆ #about (.about)
+ * ────────────────────────────────────────────────────────────────────────
+ * - 日本語: 自己紹介セクション
+ * - English: About section
+ * - 子要素:
+ *   - .about-container: コンテンツコンテナ
+ *   - .about-text: 自己紹介テキスト
+ *   - .about-stats: 統計情報グリッド
+ *   - .stat-item: 各統計項目
+ *     - .stat-number: 数値（カウントアップアニメーション）
+ *     - .stat-label: ラベル
+ *
+ * ◆ #skills (.skills)
+ * ────────────────────────────────────────────────────────────────────────
+ * - 日本語: スキルセクション
+ * - English: Skills section
+ * - 子要素:
+ *   - .skills-grid: スキルカードグリッド
+ *   - .skill-card: 各スキルカード
+ *     - .skill-icon: アイコン
+ *     - .skill-info: 情報
+ *       - .skill-name: スキル名
+ *       - .skill-description: 説明
+ *
+ * ◆ #atcoder (.atcoder)
+ * ────────────────────────────────────────────────────────────────────────
+ * - 日本語: 競技プログラミングセクション（AtCoder）
+ * - English: Competitive programming section (AtCoder)
+ * - 子要素:
+ *   - .atcoder-cards: カードコンテナ
+ *   - .atcoder-card[data-contest-type]: AtCoderカード
+ *     - data-contest-type: "algo" (アルゴリズム) | "heuristic" (ヒューリスティック)
+ *     - .atcoder-rating-circle: レート表示円（SVGアニメーション用コンテナ）
+ *       - .rating-value: レート数値
+ *       - .rating-label: ラベル
+ *     - .atcoder-stats: 統計情報グリッド
+ *       - .stat-circle: 統計値表示円
+ *       - data-stat-circle="highest": 最高レート用円
+ *       - data-stat-circle="performance": 最高パフォーマンス用円
+ *       - data-stat="highest": 最高レート値
+ *       - data-stat="performance": 最高パフォーマンス値
+ *   - .atcoder-reload-btn: データ再読み込みボタン
+ *   - .atcoder-note: 注釈テキスト
+ *
+ * ◆ #contact (.contact)
+ * ────────────────────────────────────────────────────────────────────────
+ * - 日本語: お問い合わせセクション
+ * - English: Contact section
+ * - 子要素:
+ *   - .contact-grid: コンタクト情報グリッド
+ *   - .contact-item: 各コンタクト項目
+ *   - .contact-form: お問い合わせフォーム
+ *     - input[name="name"]: 名前
+ *     - input[name="email"]: メールアドレス
+ *     - textarea[name="message"]: メッセージ
+ *
+ * ============================================================================
+ * 🏷️ データ属性 / Data Attributes
+ * ============================================================================
+ *
+ * data-contest-type: "algo" | "heuristic"
+ * - 日本語: コンテストタイプ識別
+ * - English: Contest type identification
+ * - 使用: .atcoder-card
+ *
+ * data-rating: number
+ * - 日本語: レート値（JavaScriptで動的に設定）
+ * - English: Rating value (set dynamically by JavaScript)
+ * - 使用: .rating-value, data-stat要素
+ *
+ * data-stat: "highest" | "performance"
+ * - 日本語: 統計値タイプ識別
+ * - English: Stat type identification
+ * - 使用: 統計値表示要素
+ *
+ * data-stat-circle: "highest" | "performance"
+ * - 日本語: 統計値表示円の識別
+ * - English: Stat circle identification
+ * - 使用: .stat-circle要素
+ *
+ * ============================================================================
+ * 🔗 外部リソース / External Resources
+ * ============================================================================
+ *
+ * スタイルシート:
+ * - styles.css: メインスタイルシート
+ *
+ * JavaScript:
+ * - script.js: メインJavaScript（アニメーション、データ取得等）
+ *
+ * フォント:
+ * - Google Fonts: Noto Sans JP (weights: 300, 400, 500, 700)
+ *
+ * アイコン:
+ * - Font Awesome 6.0.0: アイコンライブラリ
+ *
+ * ============================================================================
+ *
+ * @author Yusei Maekawa (前川 雄世)
+ * @version 1.0.0
+ * @since 2025-11-01
+ * @updated 2025-11-17
+ */
+-->
 <html lang="ja">
 
 <head>
