--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@
                     <h2 class="hero-title">
                         <span class="hero-name">私は 前川 雄世 です！！</span>
                     </h2>
-                    <p class="hero-subtitle">気になることに、躊躇せず行動する！ | 好きこそものの上手なれ！</p>
+                    <p class="hero-subtitle">
+                        <span id="typed-text"></span>
+                    </p>
                     <div class="hero-buttons">
                         <a href="#about" class="btn btn-primary">詳しく見る</a>
                         <a href="#contact" class="btn btn-secondary">お問い合わせ</a>
@@ -604,6 +606,11 @@
         </footer>
     </div> <!-- メインコンテンツ終了 -->
 
+    <!-- GSAP CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <!-- Typed.js CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="script.js"></script>
 </body>
 
