--- a/index.html
+++ b/index.html
@@ -242,6 +242,8 @@
 
         <!-- ヒーローセクション -->
         <section id="home" class="hero">
+            <!-- Three.js 3D背景キャンバス -->
+            <canvas id="hero-canvas"></canvas>
             <div class="hero-container">
                 <div class="hero-content">
                     <div class="hero-welcome">
@@ -606,6 +608,8 @@
         </footer>
     </div> <!-- メインコンテンツ終了 -->
 
+    <!-- Three.js CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
     <!-- GSAP CDN -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
