fix(quality): 高優先度の品質改善3件を実施
- GitHubリンクのURL重複を修正（index.html 694行目）
- 外部ライブラリにdefer属性を追加してページ読み込み高速化
  - Three.js, GSAP, ScrollTrigger, Typed.js, script.js
- アイコンにaria-label属性を追加してアクセシビリティ向上
  - スキルセクション（HTML5, Git）
  - コンタクトセクション（GitHub, LinkedIn）
- フッターのソーシャルリンクをGitHubのみに整理

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                     </div>
                     <div class="skill-card">
                         <div class="skill-icon">
-                            <i class="fab fa-html5"></i>
+                            <i class="fab fa-html5" aria-label="HTML5アイコン"></i>
                         </div>
                         <h3>Web Frontend</h3>
                         <p>HTML, CSS, JavaScript, React, Vue.js</p>
@@ -352,7 +352,7 @@
                     </div>
                     <div class="skill-card">
                         <div class="skill-icon">
-                            <i class="fab fa-git-alt"></i>
+                            <i class="fab fa-git-alt" aria-label="Gitアイコン"></i>
                         </div>
                         <h3>Tools</h3>
                         <p>Git, Docker, AWS, VS Code</p>
@@ -687,16 +687,16 @@
                         </div>
                         <div class="contact-item">
                             <div class="contact-icon">
-                                <i class="fab fa-github"></i>
+                                <i class="fab fa-github" aria-label="GitHubアイコン"></i>
                             </div>
                             <div class="contact-details">
                                 <h3>GitHub</h3>
-                                <p>github.com/https://github.com/Yusei-Maekawa</p>
+                                <p><a href="https://github.com/Yusei-Maekawa" target="_blank" rel="noopener noreferrer">github.com/Yusei-Maekawa</a></p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <div class="contact-icon">
-                                <i class="fab fa-linkedin"></i>
+                                <i class="fab fa-linkedin" aria-label="LinkedInアイコン"></i>
                             </div>
                             <div class="contact-details">
                                 <h3>LinkedIn</h3>
@@ -728,9 +728,7 @@
                 <div class="footer-content">
                     <p>&copy; 2025 前川 雄世 Maedora. All rights reserved.</p>
                     <div class="social-links">
-                        <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/Yusei-Maekawa" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="GitHubプロフィール"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
@@ -738,15 +736,15 @@
     </div> <!-- メインコンテンツ終了 -->
 
     <!-- Three.js CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
     <!-- GSAP CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <!-- Typed.js CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/typed.js@2.0.16/dist/typed.umd.js"></script>
     
     <!-- メインスクリプト（元のscript.jsを使用） -->
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
     
     <!-- モジュール形式（開発中） -->
     <!-- <script type="module" src="js/main.js"></script> -->
